baml_language/crates/baml_tests/snapshots/compiles/test_expr_throwing_body/baml_tests__compiles__test_expr_throwing_body__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 31128
---
=== PPIR ===
function user.$init_test_main(registry: testing.TestCollector) -> ?  [expr] {
  { registry.register_test("throwing body bec...", () -> void { {  } risky() }, null) } null
}
function user.risky() -> void  [expr] {
  { throw "boom" }
}
