baml_language/crates/baml_tests/snapshots/compiles/test_expr_throwing_body/baml_tests__compiles__test_expr_throwing_body__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.risky() -> void throws string {
  { : never
    throw "boom" : "boom"
  }
}
function user.$init_test_28(registry: testing.TestCollector) -> ? throws never {
  { : null
    registry.register_test("throwing body bec...", () -> void { ... }, null) : void
      () -> void { ... } : () -> void throws unknown
        {
          risky()
        }
    null : null
  }
}
lambda user.$init_test_28 {
}
