baml_language/crates/baml_tests/snapshots/compiles/test_expr_throwing_body/baml_tests__compiles__test_expr_throwing_body__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 19481
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
