baml_language/crates/baml_tests/snapshots/compiles/test_expr_throwing_body/baml_tests__compiles__test_expr_throwing_body__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function $init_test() -> null {
    load_var ?1
    call ?
    pop 1
    load_const ?
    return
}

function user.$init_test_33(registry: testing.TestCollector) -> null {
    load_var registry
    load_const "throwing body becomes failure"
    make_closure .<lambda($init_test_33, 0)>, 0
    load_const null
    call testing.TestCollector.register_test
    pop 1
    load_const null
    return
}

function user.risky() -> void {
    load_const "boom"
    throw
}
